package idgs.store.pb;

option java_outer_classname = "PbStoreMapper";


/// mapper load file with a store
message StoreFileMapper {
  optional string schema       = 1;
	required string store_name   = 2;
	required string file_name    = 3;
	optional string seperator    = 4 [ default = "|" ];
	repeated string fields       = 5; /// if empty, follow store config file's orignal field order
}

message StoreFileMapperConfig {
	repeated StoreFileMapper mapper = 1;
}
